--- a/css/styles.css
+++ b/css/styles.css
@@ -410,6 +410,7 @@ img {
 .social-network-client{
   margin-right: 30px; 
 }
+
 .client-list .item {
   width: calc((100% - 150px) / 6);
 }
@@ -429,7 +430,9 @@ img {
   border-radius: 4px;
 }
 .client-link:hover,
-.client-link:focus {
+.client-link:focus,
+.icon-client:hover,
+.icon-client:focus {
   color: var(--color-blue);
   fill: var(--color-blue);
   background-color: var(--color-white);
@@ -441,12 +444,6 @@ img {
   width: 106px;
   height: 60px;
 }
-.icon-client:hover,
-.icon-client:focus {
-  color: var(--color-blue);
-  fill: var(--color-blue);
-  border-color: var(--color-blue);
-}
 .footer{
   text-decoration: none; 
   background-color: var(--color-third-background);
@@ -457,6 +454,7 @@ img {
   width: 1200px;
   display: flex;
   flex-direction: row;
+  align-items: baseline;
 }
 .logo-footer{
   display: block;
@@ -637,7 +635,8 @@ margin-right: 10px;
   display: block;
   text-decoration: none;
 }
-.link-portfolio:hover {
+.link-portfolio:hover,
+.link-portfolio:focus{
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
